+Score board, and some bug fixes

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 	<body>
 		<div class="section">
 			<div id="gameDiv">
+				<div class="scoreBoard">
+					<img src="images/scoreBoard.png"></img>
+					<div id="score"></div>
+				</div>
 			</div>
   		</div>
   	</body>
