--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<img src="images/scoreBoard.png"></img>
 					<div id="score"></div>
 				</div>
-				<div class='popup' style="display:none">Level 1</div>
+				<div class='popup' style="display:none"></div>
 			</div>
   		</div>
   	</body>
