--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>
 			Ping Pong
 		</title>
-		<!--<link rel="shortcut icon" type="image/ico" href="images/favicon.ico"/>-->
+		<link rel="shortcut icon" type="image/ico" href="images/favicon.ico"/>
 		<script src="jquery-2.2.3.min.js"></script>
 		<script type="text/javascript" src="pingPong.js"></script>
 		<link rel="stylesheet" href="styles.css">
