--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 					<img src="images/scoreBoard.png"></img>
 					<div id="score"></div>
 				</div>
+				<div class="lives">
+				</div>
 				<div class='popup' style="display:none"></div>
 			</div>
   		</div>
