click bg added and bug fixes

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<body>
 		<div class="section">
 			<div id="gameDiv">
+				<img src="images/bgInfoClick.jpg" class="gameDivBG"></div>
 				<div class="scoreBoard">
 					<img src="images/scoreBoard.png"></img>
 					<div id="score"></div>
